--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "public/**/*",
+        "src": "package.json",
         "use": "@vercel/php"
       }
     ],
