--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,29 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "framework": null,
+  "functions": {
+      "api/index.php": { "runtime": "vercel-php@0.6.0" }
+  },
+  "routes": [
       {
-        "src": "public/index.php",
-        "use": "@vercel/php"
+          "src": "/(.*)",
+          "dest": "/api/index.php"
       }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/public/index.php"
-      }
-    ]
+  ],
+  "env": {
+      "APP_ENV": "production",
+      "APP_DEBUG": "true",
+      "APP_URL": "https://your.url.from.vercel.app",
+      "APP_KEY": "base64:4yVlgBTrcMmF0dTo5sN5l7ororf7JDSsygxWCsdtP04=",
+      "APP_CONFIG_CACHE": "/tmp/config.php",
+      "APP_EVENTS_CACHE": "/tmp/events.php",
+      "APP_PACKAGES_CACHE": "/tmp/packages.php",
+      "APP_ROUTES_CACHE": "/tmp/routes.php",
+      "APP_SERVICES_CACHE": "/tmp/services.php",
+      "VIEW_COMPILED_PATH": "/tmp",
+
+      "CACHE_DRIVER": "array",
+      "LOG_CHANNEL": "stderr",
+      "SESSION_DRIVER": "cookie"
   }
-  
+}
