--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "routes": [
       {
           "src": "/(.*)",
-          "dest": "/public/index.php"
+          "dist": "/public/index.php"
       }
   ],
   "env": {
